# erp-cli

./: .env.example  .gitignore  README.md  commands  erp-cli.py  erp-cli.spec  pyproject.toml
agent-skill/erp-cli/: SKILL.md
agent-skill/erp-skill/: SKILL.md
src/: client.py  main.py  ui.py  utils.py
src/commands/: milestones.py  projects.py  stages.py  tasks.py  users.py
